# DRF-Generic-API

./: .gitignore  LICENSE  README.md  pyproject.toml
src/django_generic_viewset/: __init__.py  views.py
web_client/: api_sdk.ts  package-lock.json  package.json
