[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-generic-viewset"
version = "0.1.0"
authors = [
  { name="Sheldon Arthur Sagrado", email="sheldonarthursagrado@gmail.com" },
]
description = "A generic Django REST Framework viewset with advanced features"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.12",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/cup-noodlehS/DRF-Generic-API"
"Bug Tracker" = "https://github.com/cup-noodlehS/DRF-Generic-API/issues"